force-app/main/default/objects/Copyright_Disclosure__c/Copyright_Disclosure__c.object-meta.xml
<CustomObject>
    <label>Copyright Disclosure</label>
    <nameField>
        <label>Copyright Disclosure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Copyright Disclosures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>