force-app/main/default/objects/Copyright_Disclosure__c/fields/Copyright_Categorization__c.field-meta.xml
<CustomField>
    <fullName>Copyright_Categorization__c</fullName>
    <description>Consider common industry phrases and terms that best describe the invention and/or the problem that is being solved.</description>
    <label>Copyright Categorization</label>
    <type>TextArea</type>
</CustomField>