force-app/main/default/objects/Copyright_Disclosure__c/fields/Creators_Request_Distrib_Open_Source_YN__c.field-meta.xml
<CustomField>
    <fullName>Creators_Request_Distrib_Open_Source_YN__c</fullName>
    <label>Creators Request Distribute Open Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N_U</valueSetName>
    </valueSet>
</CustomField>