force-app/main/default/objects/Copyright_Disclosure__c/fields/Creators_Request_Distribute_Open_Source__c.field-meta.xml
<CustomField>
    <fullName>Creators_Request_Distribute_Open_Source__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Creators Request Distribute Open Source</label>
    <type>Checkbox</type>
</CustomField>