force-app/main/default/objects/Copyright_Disclosure__c/fields/Incorporate_Third_Party_Content__c.field-meta.xml
<CustomField>
    <fullName>Incorporate_Third_Party_Content__c</fullName>
    <label>Incorporate Content From Third Party</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>