force-app/main/default/objects/Copyright_Disclosure__c/fields/MIT_Point_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>MIT_Point_of_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Department Contact</description>
    <label>MIT Point of Contact (Old)</label>
    <referenceTo>TLO_Contact__c</referenceTo>
    <relationshipLabel>Copyright Disclosures OLD</relationshipLabel>
    <relationshipName>Copyright_Point_of_Contact_OLD</relationshipName>
    <type>Lookup</type>
</CustomField>