force-app/main/default/objects/Copyright_Disclosure__c/fields/MIT_Point_of_Contact_Acc__c.field-meta.xml
<CustomField>
    <fullName>MIT_Point_of_Contact_Acc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MIT Point of Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Related Account must be a Person Account.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Person Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Copyright Disclosures</relationshipLabel>
    <relationshipName>Copyright_Point_of_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>