force-app/main/default/objects/Copyright_Disclosure__c/fields/Part_Of_Employment_YN__c.field-meta.xml
<CustomField>
    <fullName>Part_Of_Employment_YN__c</fullName>
    <label>Part Of Employment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N_U</valueSetName>
    </valueSet>
</CustomField>