force-app/main/default/objects/Copyright_Disclosure__c/fields/Years_Code_First_Created__c.field-meta.xml
<CustomField>
    <fullName>Years_Code_First_Created__c</fullName>
    <label>Years Code First Created</label>
    <type>TextArea</type>
</CustomField>