force-app/main/default/objects/Copyright_Disclosure__c/fields/Years_Code_First_Published__c.field-meta.xml
<CustomField>
    <fullName>Years_Code_First_Published__c</fullName>
    <label>Years Code First Published</label>
    <type>TextArea</type>
</CustomField>